# intTools

./: .gitattributes  .gitignore  .graphifyignore  AGENTS.md  EXTERNAL_TOOLS.md  GEMINI.md  README.md  RELEASE.md  agent_sync.yaml  release.md  requirements-dev.txt  requirements.txt  tools.catalog.v1.json
.agents/plugins/: marketplace.json
.codex/: hooks.json
.codex/hooks/: int_runtime_context_guard.py  inttools_contour_guard.py
.codex/plugins/: marketplace.json
.githooks/: commit-msg  pre-commit  pre-push
.github/workflows/: ci.yml
.tmp/: apply_progress_check.py  check_agents_sessions.py  check_current_counts.py  create_agents_and_store_secret.py  fix_client_names_dev.py  gen_apply_sql_remote.py  inspect_activity_again.py  inspect_agents_pid.py  inspect_dry_run_activity.py  inspect_dry_run_container.py  inspect_locks_again.py  inspect_socket_dry.py  intdata_admin_probe.py  intdata_container_probe.py  intdata_docker_admin_probe.py  probe_agents_container_path.py  remote_refresh_runner.py  remote_refresh_runner_filedirect.py  roles_intdata.py  roles_punktb.py  roles_usage_local.py  roles_usage_remote.py  run_remote_socket_dry.py  sample_recent_clients.py  terminate_agents_and_apply.py  verify_client_names.py
.tmp/20260424T141500/: client_verify.py  role_probe.py  role_probe2.out  role_probe2.py
.tmp/20260424T150500/: db_role_audit.err  db_role_audit.out  db_role_audit.py
.tmp/20260424T151500/: intdata_audit.out  intdata_audit.py  intdata_dbowners.out  intdata_dbowners.py  live_counts_probe.out  live_counts_probe.py  punktb_audit.out  punktb_audit.py
.tmp/20260424T155500/: intdata_drop_candidates.py  out.txt
.tmp/20260424T160500/: apply_prod_cleanup.py  stdout.txt
.tmp/20260424T161500/: apply_intdata_cleanup.py  final_stderr.txt  final_stdout.txt  finalize_zabbix_and_postcheck.py  finish2_stderr.txt  finish2_stdout.txt  finish_intdata_cleanup.py  finish_intdata_cleanup_2.py  finish_stderr.txt  intdata_postcheck.py  postcheck.out  stderr.txt  stdout.txt
.tmp/20260424T162500/: final_verify.py  out.txt
agent_plane/: README.md  __init__.py  audit.py  dispatcher.py  local_harness.py  mcp_server.py  models.py  policy.py  server.py
agent_plane/migrations/: 001_agent_plane.sql
amocrm-mcp/: .env.example  README.md  pyproject.toml  run-amocrm-mcp.cmd
amocrm-mcp/amocrm_mcp/: api_manifest.json  api_manifest.py  client.py  config.py  server.py  umnico_client.py
amocrm-mcp/amocrm_mcp/models/: schemas.py
amocrm-mcp/amocrm_mcp/tools/: __init__.py  batch.py  leads.py  notes.py  pipelines.py  public_api.py  tasks.py  umnico.py
amocrm-mcp/scripts/: update_api_manifest.py
amocrm-mcp/tests/: test_api_manifest.py  test_public_api_client.py  test_umnico_client.py
bitrix24-mcp/: .env.example  .gitignore  README.md  pyproject.toml  run-bitrix24-mcp.cmd
bitrix24-mcp/bitrix24_mcp/: __main__.py  api_manifest.json  api_manifest.py  client.py  server.py
bitrix24-mcp/scripts/: __init__.py  update_api_manifest.py
bitrix24-mcp/tests/: test_bitrix24_mcp.py
codex/: README.md  cleanup_agent_orphans.sh  cloud_access.sh  debate.env  detach_home_git.sh  duplex_bridge.py  install_cloud_access.sh  install_orphan_cleaner_cron.sh  layout-policy.json  sync_runtime_from_repo.ps1  sync_runtime_from_repo.sh
codex/hooks/: hooks.json  (+1 more)
codex/tools/bitrix24-mcp/: README.md  pyproject.toml
codex/tools/bitrix24-mcp/bitrix24_mcp/: client.py  config.py  server.py
codex/tools/bitrix24-mcp/tests/: test_bitrix24_mcp.py
codex/tools/getcourse-mcp/: .env.example  README.md  pyproject.toml  run-getcourse-mcp.cmd
codex/tools/getcourse-mcp/getcourse_mcp/: client.py  config.py  server.py
codex/tools/getcourse-mcp/tests/: test_getcourse_mcp.py
codex/tools/tilda-mcp/: README.md  launcher.py  pyproject.toml  run-tilda-mcp.cmd  run-tilda-mcp.sh
codex/tools/tilda-mcp/tests/: test_tilda_mcp.py
codex/tools/tilda-mcp/tilda_mcp/: __init__.py  client.py  server.py
codex/tools/vakas-mcp/: README.md  pyproject.toml  run-vakas-mcp.cmd
codex/tools/vakas-mcp/tests/: test_vakas_mcp.py
codex/tools/vakas-mcp/vakas_mcp/: __init__.py  __main__.py  client.py  config.py  server.py
connectors/: README.md
coordctl/: README.md  __init__.py  __main__.py  coordctl  coordctl.cmd  coordctl.ps1  coordctl.py  coordctl_core.py  import_lockctl_history.py  install_coordctl.ps1  install_coordctl.sh
data/: .gitignore  AGENTS.md  README.md  markdown-context-policy.json
dba/: .env.example  .gitignore  AGENTS.md  README.md  dba.cmd  dba.ps1  dba.sh
delivery/: AGENTS.md  docker-compose.yaml
gate-brief-int-2/: 20260420T050000Z.json
gatesctl/: README.md  gatesctl.py
gemini-openai-proxy/: README.md  package-lock.json  package.json
getcourse-mcp/: .gitignore  README.md  pyproject.toml  run-getcourse-mcp.cmd
getcourse-mcp/getcourse_mcp/: __init__.py  __main__.py  api_manifest.json  api_manifest.py  client.py  config.py  server.py
getcourse-mcp/tests/: test_getcourse_mcp.py
graphify-out/: .graphify_root  GRAPH_REPORT.md  graph.html  graph.json
intdb/: .env.example  AGENTS.md  README.md  intdb.cmd  intdb.ps1  intdb.sh
lockctl/: README.md  __init__.py  __main__.py  install_lockctl.ps1  install_lockctl.sh  lockctl  lockctl.cmd  lockctl.ps1  lockctl.py  lockctl_core.py
openclaw/: .mcp.json  README.md
openspec/: AGENTS.md  project.md
probe/: README.md  collect_audit.sh
publish/: publish_crm.ps1  publish_data.ps1  publish_id.ps1
punctb/: env
punkt-b/: README.md  env  legacy_assess_sync.py  sync_punctb.py  sync_punktb.py
repo-ops/: README.md
roistat/: README.md  autoload.php  config.example.php  config.php  crm.php
vakas-mcp/: .env.example  README.md  pyproject.toml
vakas-mcp/tests/: test_vakas_mcp.py
vakas-mcp/vakas_mcp/: __init__.py  api_manifest.json  api_manifest.py  config.py  server.py
web/: app.js  index.html  styles.css  tools.catalog.json
(+700 files in other folders)
