[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vakas-mcp"
version = "0.2.0"
description = "Agent-agnostic manifest-backed guarded MCP ingress client for Vakas-tools"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "intData" }]
dependencies = ["httpx>=0.27", "mcp>=1.0"]

[project.scripts]
vakas-mcp = "vakas_mcp.server:main"

[tool.setuptools.packages.find]
include = ["vakas_mcp*"]

[tool.setuptools.package-data]
vakas_mcp = ["api_manifest.json"]
