[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bitrix24-mcp"
version = "0.1.0"
description = "Read-only MCP server for Bitrix24 REST webhooks"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "intData" },
]
dependencies = [
    "httpx>=0.27",
    "mcp>=1.0",
]

[project.scripts]
bitrix24-mcp = "bitrix24_mcp.server:main"

[tool.setuptools.packages.find]
include = ["bitrix24_mcp*"]
